<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.niken.tkalfiizzah.fragment.profile.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_data"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_tempat_lahir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_data">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tempat_lahir_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={vm.profile.c_LOGIN}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:hint="@string/nama_lengkap"
                app:layout_constraintEnd_toEndOf="@+id/label_tempat_lahir"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/label_tempat_lahir"
                app:layout_constraintTop_toBottomOf="@+id/label_tempat_lahir">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:text="@={vm.profile.v_NAMA}"
                    tools:text="asdsadsa" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_alamat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:hint="@string/alamat"
                app:layout_constraintEnd_toEndOf="@+id/label_fullname"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/label_fullname"
                app:layout_constraintTop_toBottomOf="@+id/label_fullname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alamat_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:text="@={vm.profile.v_ALAMAT}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_vphone1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:hint="@string/handphone_1"
                app:layout_constraintEnd_toEndOf="@+id/label_alamat"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/label_alamat"
                app:layout_constraintTop_toBottomOf="@+id/label_alamat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vphone1_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@={vm.profile.v_PHONE1}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_vphone2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:hint="@string/handphone_2"
                app:layout_constraintEnd_toEndOf="@+id/label_vphone1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/label_vphone1"
                app:layout_constraintTop_toBottomOf="@+id/label_vphone1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vphone2_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@={vm.profile.v_PHONE2}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_vtelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:hint="@string/telp_rumah"
                app:layout_constraintEnd_toEndOf="@+id/label_vphone2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/label_vphone2"
                app:layout_constraintTop_toBottomOf="@+id/label_vphone2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vtelp_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@={vm.profile.v_TELP}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/label_vtelp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/label_vtelp"
                app:layout_constraintTop_toBottomOf="@+id/label_vtelp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.profile.v_MAIL}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:enabled="@{vm.profile.c_USER != null}"
                android:onClick="@{vm::onSaveClick}"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="@+id/label_mail"
                app:layout_constraintStart_toStartOf="@+id/label_mail"
                app:layout_constraintTop_toBottomOf="@+id/label_mail" />


            <Button
                android:id="@+id/changePassButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{vm::onChangePassClick}"
                android:text="@string/ubah_password"
                app:layout_constraintEnd_toEndOf="@+id/saveButton"
                app:layout_constraintStart_toStartOf="@+id/saveButton"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{vm::onKeluarClick}"
                android:text="@string/keluar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/changePassButton"
                app:layout_constraintStart_toStartOf="@+id/changePassButton"
                app:layout_constraintTop_toBottomOf="@+id/changePassButton"
                app:layout_constraintVertical_bias="0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>